--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
 
+html {
+  box-sizing: border-box;
+  -ms-overflow-style: scrollbar;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   padding: 0;
